--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
   "dependencies": {
     "chai": "4.3.4",
     "config": "3.3.6",
+    "cors": "^2.8.5",
     "dotenv": "10.0.0",
     "esm": "3.2.25",
     "express": "4.17.1",
+    "express-rate-limit": "^5.2.6",
     "faker": "5.5.3",
+    "helmet": "^4.6.0",
     "mocha": "9.0.0",
     "morgan": "1.10.0",
     "nodemon": "2.0.7",
@@ -32,7 +35,8 @@
     "supertest": "6.1.3",
     "underscore": "1.13.1",
     "v-response": "1.1.0",
-    "validatorjs": "3.22.1"
+    "validatorjs": "3.22.1",
+    "xss-clean": "^0.1.1"
   },
   "devDependencies": {
     "jest": "27.0.4",
